Thumbnail alignment was not correct.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@2814 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/kmelia/kmelia-war/src/main/webapp/kmelia/jsp/styleSheets/kmelia.css
+++ b/kmelia/kmelia-war/src/main/webapp/kmelia/jsp/styleSheets/kmelia.css
@@ -154,7 +154,7 @@
 
 #pubList .publication {
 	white-space: normal;
-	float: left;
+	/*float: left;*/
 }
 
 #pubList .publication .bullet {
@@ -179,7 +179,7 @@
 	margin-left: 15px;
 	width: 95%;
 	white-space: normal;
-	float: left;
+	/*float: left;*/
 }
 
 #pubList .publication .line3 {
